# gtest-cmake-bug-repro

./: CMakeLists.txt  README.md  hello_test.cc
